chore: build.xml, all.xml errorprone, checkstyle, jdk-11